--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "ng-zorro-antd": "^11.4.0",
     "ol": "^6.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
