--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
     "file-saver": "^2.0.5",
+    "kompas": "^0.0.1",
     "ng-zorro-antd": "^11.4.0",
     "ol": "^6.5.0",
     "rxjs": "~6.6.0",
