--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "kompas": "^0.0.1",
     "ng-zorro-antd": "^11.4.0",
     "ol": "^6.5.0",
+    "ol-mapbox-style": "^6.3.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
